# sgbd

./: .gitignore  CLAUDE.md  Makefile  README.md  newtester.py  pyproject.toml  pytest.ini  run.py  test.sh
.github/workflows/: python-tests.yml
core/: FullScanTableDisque.py  FullScanTableMemoire.py  IndexDisque.py  Instrumentation.py  Operateur.py  TableDisque.py  TableMemoire.py
index/: BPlusTreeIndex.py  DynamicHashIndex.py  StaticHashIndex.py  __init__.py
manual_tests/: TestArbreManuel.py  TestBenchmark.py  TestDiskIntegration.py  TestHashJoin.py  TestJoin.py  TestOptimizer.py  TestProject.py  TestRestrictChained.py  TestSQL.py
operators/: Aggregate.py  GetWithIndex.py  HashJoin.py  IndexNestedLoopJoin.py  IndexScan.py  Join.py  Project.py  Restrict.py  SortMergeJoin.py
sql/: Catalog.py  Executor.py  Lexer.py  Optimizer.py  Parser.py  Planner.py  __init__.py
tests/: TestAggregate.py  TestRestrictChainedFixed.py
tests/core/: test_disk_table.py  test_full_scan_table_memoire.py  test_table_memoire.py  test_tuple.py
tests/manual/: TestIndex.py  TestRestrict.py
tests/operators/: test_aggregate_operator.py  test_get_with_index.py  test_hashjoin.py  test_index_nested_loop_join.py  test_join_operator.py  test_project_operator.py  test_restrict_operator.py  test_sort_merge_join.py
tests/unit/: test_operators.py
tools/: SQL_INTERPRETER.md  create_benchmark_data.py  create_sample_data.py  sql_interpreter.py
