[project]
name = "miniSGBD"
version = "0.1.0"
description = "Mini SGBD Database Project"
authors = [{name = "Jeomhps"}]
dependencies = []

[tool.uv]
dev-dependencies = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "operators"]
