[project]
name = "miniSGBD"
version = "0.1.0"
description = "Mini SGBD Database Project"
authors = [{name = "Jeomhps"}]
dependencies = []
requires-python = ">=3.14"

[tool.uv]
dependency-groups.dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "operators"]
