[project]
name = "miniSGBD"
version = "0.1.0"
description = "Mini SGBD Database Project"
authors = [{name = "Jeomhps", name = "Orjawell"}]
dependencies = []
requires-python = ">=3.14"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "operators"]
